Refine some of the spacing issues

--- a/app/artist/[slug]/Artist.module.css
+++ b/app/artist/[slug]/Artist.module.css
@@ -33,6 +33,6 @@
     }
 
     .Artist-imageWrapper {
-        aspect-ratio: 1 / 1.5;
+        aspect-ratio: 1 / 1.6;
     }
 }
