--- a/app/components/Section/Section.module.css
+++ b/app/components/Section/Section.module.css
@@ -1,4 +1,5 @@
 .Section {
   margin: 0 auto;
   padding: 0 3rem;
+  width: 100%;
 }
